--- a/springCloudSMS/pom.xml
+++ b/springCloudSMS/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sptest</artifactId>
         <groupId>com.laowang</groupId>
-        <version>2.1.9.RELEASE</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -126,33 +126,7 @@
             <version>2.1.0.RELEASE</version>
         </dependency>
 
-
-
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.mhj.sms.Application</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
-            </plugin>
-        </plugins>
-
-    </build>
 
 
 </project>
